Added various karma plugins to dependencies
This package seems to need an old version of karma to execute, so we want our
plugins to match. If we let it come from the host environment, it'll likely be a
newer version that doesn't work with karma 0.13.21.

Note: This is solving particular problems for me, and probably isn't generally
useful. Use at your own risk.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jshint": "~0.11.2",
-    "grunt-karma": "~0.12.1",
     "grunt-mocha-test": "~0.12.7",
     "jshint-stylish": "~2.0.0",
     "karma-chai": "~0.1.0",
@@ -49,10 +48,15 @@
     "esprima": "~2.7.2",
     "fs-extra": "~0.16.5",
     "glob": "~5.0.10",
+    "grunt-karma": "~0.12.1",
     "handlebars": "~3.0.3",
     "htmlparser2": "~3.8.2",
     "karma": "~0.13.21",
     "karma-coverage": "~0.5.3",
+    "karma-dojo": "https://github.com/divido/karma-dojo#npm-ready",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-matchers": "~3.7.0",
+    "karma-firefox-launcher": "~0.1",
     "lodash": "~3.9.3",
     "log4js": "~0.6.25",
     "mocha": "~1.21.5",
